fixed overflow hidden problem with modal

--- a/my-new-site/src/css/activity.css
+++ b/my-new-site/src/css/activity.css
@@ -1,16 +1,22 @@
 .activity{
-    flex: 0 0 33.1%;                      
-    height: 50px;
+    flex: 0 0 33.1%;                     
     margin-bottom: 1px;
     background-color: #999;
+    position: relative;
 }
 
 .activityBlock{
-
+    height: 200px;
 }
 
 .activityTitle{
+    color:white;
     top: 50%;
     text-align: center;
     padding: 12px;
+}
+
+body.modal-open{
+    overflow: scroll !important;
+    padding-right: 0 !important;
 }
